--- a/plugin.xml
+++ b/plugin.xml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <plugin xmlns="http://cordova.apache.org/ns/plugins/1.0"
-           id="com.wunwun.plugins.push-notification"
+           id="com.wunwun.plugins.social-composer"
       version="1.0.0">
 
-  <name>PushNotification</name>
+  <name>SocialComposer</name>
   <author>Calvin Lai</author>
-  <description>Enables Push Notifications for iOS based Cordova apps.</description>
+  <description>Enables native composing for tweets and Facebook posts for iOS based Cordova apps.</description>
 
-  <js-module src="www/push-notification.js" name="PushNotification">
-    <clobbers target="plugins.pushNotification" />
+  <js-module src="www/social-composer.js" name="SocialComposer">
+    <clobbers target="plugins.socialComposer" />
   </js-module>
 
   <!-- ios -->
   <platform name="ios">
     <config-file target="config.xml" parent="/*">
-      <feature name="PushNotification">
-        <param name="ios-package" value="PushNotification" />
+      <feature name="SocialComposer">
+        <param name="ios-package" value="SocialComposer" />
       </feature>
     </config-file>
-    <header-file src="src/ios/PushNotification.h" />
-    <source-file src="src/ios/PushNotification.m" />
+    <header-file src="src/ios/SocialComposer.h" />
+    <source-file src="src/ios/SocialComposer.m" />
   </platform>
 
 </plugin>
